--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
   <header>
-    <img src="makino.jpg" alt="makino syasin" width="128" height="128">
+    <img src="img/makino.jpg" alt="makino syasin" width="128" height="128">
     <h1>이도우</h1>
     <p>釜山外国語大学　日本語融合学部ビジネス専攻</p>
   </header>
   <main>
     <h2>好きなもの</h2>
     <section>
-      <img src="img1.jpg" alt="img1 desu" width="400" height="240">
+      <img src="img/img1.jpg" alt="img1 desu" width="400" height="240">
       <h3>漫画</h3>
       <P>小さい頃かＫら見たので慣れて好きになりました。アニメも好きなので映像も見たり、漫画本で読んだりします。</P>
     </section>
     <SEction>
-      <img src="img2.jpg" alt="img2 desu" width="400" height="240">
+      <img src="img/img2.jpg" alt="img2 desu" width="400" height="240">
       <h3>J-POPバンド</h3>
       <P>アニメが好きなのでテーマソングを歌ったバンドに自然に興味も持って好きになりました。最近はＫＩＮＧＧＮＵというバンドにハマっています。</P>
     </SEction>
 <section>
-    <img src="img3.jpg" alt="img3 desu" width="400" height="240">
+    <img src="img/img3.jpg" alt="img3 desu" width="400" height="240">
     <h3>旅行</h3>
     <P>新しいものを見たり、その地域で食べれるものを食べたり、ホテルで泊まりながら休んだり、ただ町の姿を見るのも好きです。</P>
 </section>
